# asklad_web

./: .gitignore  Dockerfile  README.md  db.sqlite3  docker-compose.yml  main.py  pyproject.toml  requirements.txt  sshkey  sshkey.pub  startup.sh  test_db.sqlite3
alembic/: env.py
alembic/versions/: 0a4adca3b4a6_.py  0cb0be2ba550_first.py  2018acf2d841_.py  2057154397b2_create_tables.py  25323efa1c3d_1.py  29f4e9570f84_.py  2dbd674b3211_.py  304c5d2d40ee_first.py  321adcf718d3_first.py  3b862f6b803f_.py  48b82719cf94_.py  4b6fd10ddcc5_add_field_given_by.py  4cbb0812e2f0_1.py  509f39c0da35_first.py  5f6fc299dade_create_tables.py  60393481ecbf_create_all_tables.py  61a28e39403e_.py  6cb3adc40658_change_assoc_product_id_field_type.py  8747ed494af7_create_all_tables.py  88a5cca993bd_create_tables.py  8b433d8eae8e_change_user_id_field_type_in_.py  9333347b3a4a_.py  96e37cf203c4_create_all_tables.py  aca92c9d7d0a_create_all_tables.py  ae4a0a5c2f4d_.py  b1e63e781920_create_all_tables.py  b52886f8540d_create_tables.py  d01753fcbc63_change_customer_field_in_order.py  d0cfdc96d151_.py  dc7c2fe570a4_.py  (+6 more)
auth/: jwt_auth.py  schemas.py  utils.py  views.py
certs/: jwt-private.pem  jwt-public.pem
core/: settings.py
smtp/: __init__.py  service.py
src/: exceptions.py  main.py
templates/: template.html
tests/: conftest.py  test_auth_router.py  test_customers_router.py  test_orders_router.py  test_products_router.py
uploaded_files/: 2024_05_31_16_08_25_orders2.xlsx  2024_05_31_19_14_00_sfsfsfsf.xlsx  2024_05_31_19_14_16_новый.xlsx  2024_05_31_19_14_31_sfs.xlsx
(+127 files in other folders)
